--- a/package.json
+++ b/package.json
@@ -16,5 +16,15 @@
   "devDependencies": {
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+  "keywords": [
+    "nextjs",
+    "dallalio",
+    "real",
+    "estate"
+  ],
+  "author": "Logan Dallalio",
+  "license": "MIT"
 }
